testsuite/tests/typing-recordarg/recordarg.ml.reference

#       module M : sig type t = A of { x : int; } val f : t -> t.A end
# - : M.t -> M.t.A = <fun>
#               module A : sig type t = A of { x : int; } val f : t -> t.A end
#   module type S = sig type t = A of { x : int; } val f : t -> t.A end
# module N : sig type t = M.t = A of { x : int; } val f : t -> t.A end
#     type 'a t = A : { x : 'a; y : 'b; } -> 'a t
# val f : ('a, 'b) t.A -> 'a t = <fun>
#               module M :
  sig
    type 'a t = A of { x : 'a; } | B : { u : 'b; } -> unit t
    exception Foo of { x : int; }
  end
#                           module N :
  sig
    type 'b t = 'b M.t = A of { x : 'b; } | B : { u : 'bla; } -> unit t
    exception Foo of { x : int; }
  end
#     module type S = sig exception A of { x : int; } end
#       Characters 65-74:
    module A = (val X.x)
               ^^^^^^^^^
Error: This expression creates fresh types.
       It is not allowed inside applicative functors.
#           Characters 61-78:
    exception A of {x : string}
              ^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name exn.A.
       Names must be unique in a given structure or signature.
#         Characters 58-75:
    exception A of {x : string}
              ^^^^^^^^^^^^^^^^^
Error: Multiple definition of the type name exn.A.
       Names must be unique in a given structure or signature.
#         module M1 : sig exception A of { x : int; } end
#         Characters 34-44:
    include M1
    ^^^^^^^^^^
Error: Multiple definition of the type name exn.A.
       Names must be unique in a given structure or signature.
#         module type S1 = sig exception A of { x : int; } end
#         Characters 36-46:
    include S1
    ^^^^^^^^^^
Error: Multiple definition of the type name exn.A.
       Names must be unique in a given structure or signature.
#         Characters -1--1:
  
  
Error: In module M:
       Modules do not match:
         sig exception A of { x : int; } exception A end
       is not included in
         sig exception A of { x : int; } exception A end
       In module M:
       Extension declarations do not match:
         type exn += A
       is not included in
         type exn += A of { x : int; }
# 
